# universal-multi-segmented-bi-buffer-bus

./: .gitignore  CMakeLists.txt  FINAL_PROJECT_SUMMARY.md  LICENSE  PUBLICATION_READY.md  README.md  RingBuffer.hpp  RingBufferTestGUI.cpp  build.bat  build.sh  build_adaptive.bat  build_comprehensive_test.bat  build_core.py  build_wasm.bat  build_wasm.sh  build_wasm_simple.bat  build_wasm_simple.sh  comprehensive_test.c  main.cpp  ultimate_adaptive_test.c  ultimate_dashboard.html  ultimate_test_simple.c  umsbb_build_config.h  umsbb_core.js  universal-multi-segmented-bi-buffer-bus  web_demo.html
.github/workflows/: cmake-single-platform.yml
bindings/csharp/: DirectUniversalBus.cs
bindings/go/: umsbb.go
bindings/javascript/: umsbb_direct.js
bindings/python/: umsbb_direct.py
bindings/rust/src/: lib.rs
cmake/: UniversalMultiSegmentedBiBufferBusConfig.cmake.in
connectors/cpp/: umsbb_connector.hpp
connectors/javascript/: README.md  demo.html  demo.js  package.json  umsbb_connector.d.ts  umsbb_connector.js
connectors/python/: umsbb_connector.py
connectors/rust/: Cargo.toml
connectors/rust/src/: lib.rs  main.rs
docs/: CUSTOMIZATION_GUIDE.md  WEBASSEMBLY_PACKAGE_READY.md
examples/: gpu_acceleration_example.c  multi_language_example.c
include/: arena_allocator.h  atomic_compat.h  bi_buffer.h  fast_lane.h  fault_tolerance.h  feedback_handshake.h  feedback_stream.h  gpu_accelerated_buffer.h  gpu_delegate.h  language_bindings.h  parallel_throughput_engine.h  twin_lane.h  umsbb_api.h  universal_multi_segmented_bi_buffer_bus.h  web_controller.h
somakernel/: CMakeLists.txt  README.md  build_wasm.ps1  emcc_call_log.txt  emcc_log.txt  emcc_py_direct_log.txt  emcc_py_full_log.txt  emcc_py_log.txt  somakernel.js  somakernel.wasm  wasm_test.js
somakernel/cli/: somakernel.py
somakernel/include/: adaptive_batch.h  bi_buffer.h  capsule.h  flow_control.h  gpu_delegate.h  high_water_mark.h  portable_atomic.h  segment_ring.h  sequence_header.h  somakernel.h
somakernel/src/: arena_allocator.c  bi_buffer.c  event_scheduler.c  flow_control.c  gpu_delegate.c  somakernel.c
somakernel/test/: benchmark_performance.c  test_somakernel.c
somakernel/wasm/: dashboard.js  harness.js  somakernel.html  styles.css
src/: adaptive_batch.c  capsule.c  fast_lane.c  fault_tolerance.c  feedback_handshake.c  feedback_stream.c  gpu_accelerated_buffer.c  gpu_delegate.c  high_water_mark.c  language_bindings.c  parallel_throughput_engine.c  sequence_header.c  twin_lane.c  umsbb_complete_core.c  umsbb_parallel_impl.c  umsbb_wasm_core.c  universal_multi_segmented_bi_buffer_bus.c  web_controller.c
test/: benchmark_performance.c  comprehensive_test_suite.c  enhanced_parallel_throughput_test.c  simplified_parallel_test.c  test_v3_api_design.c
universal-multi-segmented-bi-buffer-bus/: CMakeLists.txt  README.md
universal-multi-segmented-bi-buffer-bus/include/: event_scheduler.h
universal-multi-segmented-bi-buffer-bus/src/: bi_buffer.c  segment_ring.c  universal_multi_segmented_bi_buffer_bus.c
universal-multi-segmented-bi-buffer-bus/test/: benchmark_performance.c  test_universal_multi_segmented_bi_buffer_bus.c
universal-multi-segmented-bi-buffer-bus/wasm/: dashboard.js  harness.js  ring.js
wasm/: harness.js  universal_multi_segmented_bi_buffer_bus.html
web/: README.md  index.html  simple_example.html  umsbb_core.wasm
